# markus-thesis

./: .gitignore  Makefile  README.md  TODO.md  description.md  dune-project  log.md
examples/: .gitignore  arg.shard  cluster_setup.shard  fixed_crash.shard  hostname.shard  index.shard  input.txt  line_length.shard  line_length_ssh.sh  line_length_ssh_parallel.sh  memory_log.txt  memory_usage.shard  random_crash.shard  random_hash.shard  short.txt  time_end.shard  time_start.shard  word_count.shard  word_count_slow.shard  word_length.shard
examples/experiments/: Makefile  cluster_setup.shard  e10.shard  e11.shard  e12.shard  e12b.sh  e12b_nolog.sh  e12b_nonparallel.sh  e1a.shard  e1b.shard  e2a.shard  e2b.shard  e3a.shard  e3b.shard  e4b.shard  e4b_cluster_setup.shard  e5.shard  e6.shard  e7.shard  e8.shard  e9.shard  fixed_crash.shard  local_cluster_setup.shard  perform_throttle.shard  random_crash.shard  random_fail.shard  setup.shard  setup_packet_loss.shard  setup_packet_loss_vary.shard  setup_throttle.shard  takedown_packet_loss.shard  takedown_throttle.shard
extras/examples/: handler.md  shell.md
extras/trace/: .gitignore  Makefile  hello.cpp  trace.cc  trace.cpp
related_work/: Makefile  annotated-bibliography.tex  refs.bib
scripts/: logreader.py  plot.py
src/: .merlin  application_class.ml  ast.ml  ast.mli  beta_sampler.ml  beta_sampler.mli  builtin.ml  builtin.mli  cluster_type.ml  cluster_type.mli  data_parallel_backend.ml  dresh_shell.ml  dresh_shell.mli  dune  env.ml  env.mli  env_image.ml  env_image.mli  eval.ml  eval.mli  hellomarkus.cpp  job.ml  job.mli  keepalive.ml  keepalive.mli  main.cc  network.cc  network.hh  pipe_process.ml  pipe_process.mli  remote.ml  remote.mli  remote_cluster.ml  remote_cluster.mli  remote_rpc.ml  remote_rpc.mli  remote_ssh.ml  remote_ssh.mli  remote_target.ml  remote_target.mli  (+20 more)
src/angstrom_extended/: angstrom_extended.ml  angstrom_extended.mli  dune  parser.ml
src/mllibssh_extended/: discover.ml  dune  dune.inc  libssh-c.c  libssh-channel.c  libssh-ocaml.h  libssh-pki.c  libssh-rest.c  libssh-scp.c  libssh-session.c  libssh-sftp.c  libssh.ml  libssh.mli  mllibssh_extended.opam
test/: .merlin  dresh_test.ml  dune  shard_test.ml
thesis/: Makefile  references.bib  thesis.tex  thesis.tex.bak
thesis/img/experiments/: .gitignore
