; libssh OCaml bindings
; Copyright (C) 2019 Pino Toscano <ptoscano@redhat.com>
;
; This library is free software; you can redistribute it and/or
; modify it under the terms of the GNU Lesser General Public
; License as published by the Free Software Foundation; either
; version 2.1 of the License, or (at your option) any later version.
;
; This library is distributed in the hope that it will be useful,
; but WITHOUT ANY WARRANTY; without even the implied warranty of
; MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
; Lesser General Public License for more details.
;
; You should have received a copy of the GNU Lesser General Public
; License along with this library; if not, write to the Free Software
; Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301  USA

(include ./dune.inc)

(library
 (name mllibssh_extended)
 (synopsis "OCaml bindings to libssh")
 (modules Libssh)
 (wrapped false)
 (foreign_stubs
  (language c)
  (names libssh-c libssh-channel libssh-pki libssh-rest libssh-scp
    libssh-session libssh-sftp)
  (flags
   (:include c_flags.sexp)))
 (c_library_flags
  (:include c_library_flags.sexp)))

(executable
 (name discover)
 (modules Discover)
 (libraries dune.configurator))

(rule
 (targets c_flags.sexp c_library_flags.sexp)
 (deps
  (:discover discover.exe))
 (action
  (run %{discover})))
